--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist/ffa-portal/browser  # Angular's static build output
+          folder: dist/portal/browser  # Angular's static build output
           branch: gh-pages
