--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ffa-portal": {
+    "portal": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/ffa-portal",
+            "outputPath": "dist/portal",
             "index": "projects/portal/src/index.html",
             "browser": "projects/portal/src/main.ts",
             "polyfills": [
@@ -70,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "ffa-portal:build:production"
+              "buildTarget": "portal:build:production"
             },
             "development": {
-              "buildTarget": "ffa-portal:build:development"
+              "buildTarget": "portal:build:development"
             }
           },
           "defaultConfiguration": "development",
