--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ffa-portal",
+  "name": "portal",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:ffa-portal": "node dist/ffa-portal/server/server.mjs"
+    "serve:ssr:portal": "node dist/portal/server/server.mjs"
   },
   "private": true,
   "dependencies": {
