--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,7 @@
           },
           "defaultConfiguration": "development",
           "options": {
-            "proxyConfig": "projects/portal/proxy.conf.json"
+            "proxyConfig": "shared/proxy.conf.json"
           }
         },
         "extract-i18n": {
@@ -174,7 +174,10 @@
               "buildTarget": "journal:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "shared/proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
