Add production env to journal build

--- a/angular.json
+++ b/angular.json
@@ -154,7 +154,13 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "shared/environments/environment.ts",
+                  "with": "shared/environments/environment.production.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
